commit translated contents

--- a/aspnetcore/migration/21-to-22.md
+++ b/aspnetcore/migration/21-to-22.md
@@ -6,12 +6,12 @@ ms.author: scaddie
 ms.custom: mvc
 ms.date: 12/27/2018
 uid: migration/21-to-22
-ms.openlocfilehash: aea7e7b7e8de4bc2f1769e7aca278748164eb1ba
-ms.sourcegitcommit: e1cc4c1ef6c9e07918a609d5ad7fadcb6abe3e12
+ms.openlocfilehash: af6cc2e6f1d6d02fa08e6b8b22d8e0daa945fd30
+ms.sourcegitcommit: 97d7a00bd39c83a8f6bccb9daa44130a509f75ce
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 01/03/2019
-ms.locfileid: "53997173"
+ms.lasthandoff: 01/08/2019
+ms.locfileid: "54098556"
 ---
 # <a name="migrate-from-aspnet-core-21-to-22"></a>Migrer d’ASP.NET Core 2.1 vers 2.2
 
@@ -147,6 +147,80 @@ Modifier le `FROM` lignes dans votre *Dockerfile* à utiliser les nouvelles bali
 ## <a name="build-manually-in-visual-studio-when-using-iis-in-process-hosting"></a>Créer manuellement dans Visual Studio lorsque vous utilisez IIS dans le processus d’hébergement
 
 De Visual Studio **la génération automatique de demande de navigateur** expérience ne fonctionne pas avec le [IIS dans le processus modèle d’hébergement](xref:fundamentals/servers/index#in-process-hosting-model). Vous devez manuellement regénérer le projet lors de l’utilisation dans le processus d’hébergement. Améliorations apportées à cette expérience sont prévues pour une future version de Visual Studio.
+
+## <a name="update-logging-code"></a>Mettre à jour le code de journalisation
+
+* Déplacement de l’initialisation du fournisseur pour la journalisation `Startup.ConfigureServices`.
+
+  exemple 2.1 :
+
+  ```csharp
+  public void Configure(IApplicationBuilder app, ILoggerFactory loggerFactory)
+  {
+      loggerFactory.AddConsole();
+  }
+  ```
+
+  exemple 2.2 :
+
+  ```csharp
+  public void ConfigureServices(IServiceCollection services)
+  {
+      services.AddLogging(builder => builder.AddConsole());
+  }
+  ```
+
+* Modification de filtrage pour utiliser le <xref:Microsoft.Extensions.DependencyInjection.LoggingServiceCollectionExtensions.AddLogging*> générateur.
+
+  exemple 2.1 :
+
+  ```csharp
+  public void Configure(IApplicationBuilder app, ILoggerFactory loggerFactory)
+  {
+      loggerFactory.AddConsole(LogLevel.Information);
+      // or
+      loggerFactory.AddConsole((category, level) => 
+          category == "A" || level == LogLevel.Critical);
+  }
+  ```
+
+  exemple 2.2 :
+
+  ```csharp
+  public void ConfigureServices(IServiceCollection services)
+  {
+      services.AddLogging(builder => builder
+          .AddConsole()
+          .AddFilter<ConsoleLoggerProvider>
+              (category: null, level: LogLevel.Information)
+          // or
+          .AddFilter<ConsoleLoggerProvider>
+              ((category, level) => category == "A" || level == LogLevel.Critical)
+          );
+  }
+  ```
+
+* Modifier le chargement de configuration à utiliser le `AddLogging` générateur.
+
+  exemple 2.1 :
+
+  ```csharp
+  public void Configure(IApplicationBuilder app, ILoggerFactory loggerFactory)
+  {
+      loggerFactory.AddConsole(configuration);
+  }
+  ```
+
+  exemple 2.2 :
+
+  ```csharp
+  public void ConfigureServices(IServiceCollection services)
+  {
+      services.AddLogging(builder => builder
+          .AddConfiguration(configuration)
+          .AddConsole());
+  }
+  ```
 
 ## <a name="additional-resources"></a>Ressources supplémentaires
 
