--- a/aspnetcore/migration/21-to-22.md
+++ b/aspnetcore/migration/21-to-22.md
@@ -4,58 +4,60 @@ author: scottaddie
 description: Cet article décrit les conditions préalables et les étapes courantes pour la migration d’un projet ASP.NET Core 2.1 vers ASP.NET Core 2.2.
 ms.author: scaddie
 ms.custom: mvc
-ms.date: 12/27/2018
+ms.date: 01/11/2019
 uid: migration/21-to-22
-ms.openlocfilehash: af6cc2e6f1d6d02fa08e6b8b22d8e0daa945fd30
-ms.sourcegitcommit: 97d7a00bd39c83a8f6bccb9daa44130a509f75ce
+ms.openlocfilehash: cb51c795447d4a2cd5e755e3aa726e60e0646ef3
+ms.sourcegitcommit: ec71fd5a988f927ae301813aae5ff764feb3bb6a
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 01/08/2019
-ms.locfileid: "54098556"
+ms.lasthandoff: 01/12/2019
+ms.locfileid: "54249397"
 ---
-# <a name="migrate-from-aspnet-core-21-to-22"></a><span data-ttu-id="8be9e-103">Migrer d’ASP.NET Core 2.1 vers 2.2</span><span class="sxs-lookup"><span data-stu-id="8be9e-103">Migrate from ASP.NET Core 2.1 to 2.2</span></span>
+# <a name="migrate-from-aspnet-core-21-to-22"></a><span data-ttu-id="d0c71-103">Migrer d’ASP.NET Core 2.1 vers 2.2</span><span class="sxs-lookup"><span data-stu-id="d0c71-103">Migrate from ASP.NET Core 2.1 to 2.2</span></span>
 
-<span data-ttu-id="8be9e-104">Par [Scott Addie](https://github.com/scottaddie)</span><span class="sxs-lookup"><span data-stu-id="8be9e-104">By [Scott Addie](https://github.com/scottaddie)</span></span>
+<span data-ttu-id="d0c71-104">Par [Scott Addie](https://github.com/scottaddie)</span><span class="sxs-lookup"><span data-stu-id="d0c71-104">By [Scott Addie](https://github.com/scottaddie)</span></span>
 
-<span data-ttu-id="8be9e-105">Cet article explique comment mettre à jour d’un projet ASP.NET Core 2.1 existant vers ASP.NET Core 2.2.</span><span class="sxs-lookup"><span data-stu-id="8be9e-105">This article explains how to update an existing ASP.NET Core 2.1 project to ASP.NET Core 2.2.</span></span>
+<span data-ttu-id="d0c71-105">Cet article explique comment mettre à jour d’un projet ASP.NET Core 2.1 existant vers ASP.NET Core 2.2.</span><span class="sxs-lookup"><span data-stu-id="d0c71-105">This article explains how to update an existing ASP.NET Core 2.1 project to ASP.NET Core 2.2.</span></span>
 
 [!INCLUDE[](~/includes/net-core-prereqs-all-2.2.md)]
 
-## <a name="update-target-framework-moniker-tfm"></a><span data-ttu-id="8be9e-106">Mettre à jour le Moniker du Framework cible</span><span class="sxs-lookup"><span data-stu-id="8be9e-106">Update Target Framework Moniker (TFM)</span></span>
+## <a name="update-target-framework-moniker-tfm"></a><span data-ttu-id="d0c71-106">Mettre à jour le Moniker du Framework cible</span><span class="sxs-lookup"><span data-stu-id="d0c71-106">Update Target Framework Moniker (TFM)</span></span>
 
-<span data-ttu-id="8be9e-107">Les projets ciblant .NET Core doivent utiliser le [TFM](/dotnet/standard/frameworks#referring-to-frameworks) d’une version supérieure ou égale à .NET Core 2.2.</span><span class="sxs-lookup"><span data-stu-id="8be9e-107">Projects targeting .NET Core should use the [TFM](/dotnet/standard/frameworks#referring-to-frameworks) of a version greater than or equal to .NET Core 2.2.</span></span> <span data-ttu-id="8be9e-108">Mise à jour le `<TargetFramework>` texte interne du nœud avec `netcoreapp2.2`:</span><span class="sxs-lookup"><span data-stu-id="8be9e-108">Update the `<TargetFramework>` node's inner text with `netcoreapp2.2`:</span></span>
+<span data-ttu-id="d0c71-107">Les projets ciblant .NET Core doivent utiliser le [TFM](/dotnet/standard/frameworks#referring-to-frameworks) d’une version supérieure ou égale à .NET Core 2.2.</span><span class="sxs-lookup"><span data-stu-id="d0c71-107">Projects targeting .NET Core should use the [TFM](/dotnet/standard/frameworks#referring-to-frameworks) of a version greater than or equal to .NET Core 2.2.</span></span> <span data-ttu-id="d0c71-108">Mise à jour le `<TargetFramework>` texte interne du nœud avec `netcoreapp2.2`:</span><span class="sxs-lookup"><span data-stu-id="d0c71-108">Update the `<TargetFramework>` node's inner text with `netcoreapp2.2`:</span></span>
 
 ```xml
 <TargetFramework>netcoreapp2.2</TargetFramework>
 ```
 
-<span data-ttu-id="8be9e-109">Les projets ciblant .NET Framework peuvent continuer à utiliser le moniker du Framework cible d’une version supérieure ou égale à .NET Framework 4.6.1 :</span><span class="sxs-lookup"><span data-stu-id="8be9e-109">Projects targeting .NET Framework may continue to use the TFM of a version greater than or equal to .NET Framework 4.6.1:</span></span>
+<span data-ttu-id="d0c71-109">Les projets ciblant .NET Framework peuvent continuer à utiliser le moniker du Framework cible d’une version supérieure ou égale à .NET Framework 4.6.1 :</span><span class="sxs-lookup"><span data-stu-id="d0c71-109">Projects targeting .NET Framework may continue to use the TFM of a version greater than or equal to .NET Framework 4.6.1:</span></span>
 
 ```xml
 <TargetFramework>net461</TargetFramework>
 ```
 
-## <a name="adopt-the-iis-in-process-hosting-model"></a><span data-ttu-id="8be9e-110">Adopter le modèle d’hébergement intra-processus IIS</span><span class="sxs-lookup"><span data-stu-id="8be9e-110">Adopt the IIS in-process hosting model</span></span>
+## <a name="adopt-the-iis-in-process-hosting-model"></a><span data-ttu-id="d0c71-110">Adopter le modèle d’hébergement intra-processus IIS</span><span class="sxs-lookup"><span data-stu-id="d0c71-110">Adopt the IIS in-process hosting model</span></span>
 
-<span data-ttu-id="8be9e-111">Pour adopter le [modèle d’hébergement intra-processus pour IIS](xref:fundamentals/servers/index#in-process-hosting-model), ajouter le `<AspNetCoreHostingModel>` propriété avec une valeur de `InProcess` à un `<PropertyGroup>` dans le fichier projet :</span><span class="sxs-lookup"><span data-stu-id="8be9e-111">To adopt the [in-process hosting model for IIS](xref:fundamentals/servers/index#in-process-hosting-model), add the `<AspNetCoreHostingModel>` property with a value of `InProcess` to a `<PropertyGroup>` in the project file:</span></span>
+<span data-ttu-id="d0c71-111">Pour adopter le [modèle d’hébergement intra-processus pour IIS](xref:fundamentals/servers/index#in-process-hosting-model), ajouter le `<AspNetCoreHostingModel>` propriété avec une valeur de `InProcess` à un `<PropertyGroup>` dans le fichier projet :</span><span class="sxs-lookup"><span data-stu-id="d0c71-111">To adopt the [in-process hosting model for IIS](xref:fundamentals/servers/index#in-process-hosting-model), add the `<AspNetCoreHostingModel>` property with a value of `InProcess` to a `<PropertyGroup>` in the project file:</span></span>
 
 ```xml
 <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
 ```
 
-<span data-ttu-id="8be9e-112">Pour plus d'informations, consultez <xref:host-and-deploy/aspnet-core-module#hosting-models>.</span><span class="sxs-lookup"><span data-stu-id="8be9e-112">For more information, see <xref:host-and-deploy/aspnet-core-module#hosting-models>.</span></span>
+<span data-ttu-id="d0c71-112">Le modèle d’hébergement intra-processus n’est pas pris en charge pour les applications ASP.NET Core qui ciblent le .NET Framework.</span><span class="sxs-lookup"><span data-stu-id="d0c71-112">The in-process hosting model isn't supported for ASP.NET Core apps that target the .NET Framework.</span></span>
 
-## <a name="update-package-references"></a><span data-ttu-id="8be9e-113">Mettre à jour les références de package</span><span class="sxs-lookup"><span data-stu-id="8be9e-113">Update package references</span></span>
+<span data-ttu-id="d0c71-113">Pour plus d'informations, consultez <xref:host-and-deploy/aspnet-core-module#hosting-models>.</span><span class="sxs-lookup"><span data-stu-id="d0c71-113">For more information, see <xref:host-and-deploy/aspnet-core-module#hosting-models>.</span></span>
 
-<span data-ttu-id="8be9e-114">Si vous ciblez .NET Core, supprimez le `Version` attribut pour la référence de métapackage.</span><span class="sxs-lookup"><span data-stu-id="8be9e-114">If targeting .NET Core, remove the `Version` attribute for the metapackage reference.</span></span> <span data-ttu-id="8be9e-115">Inclusion d’un `Version` attribut entraîne l’avertissement suivant :</span><span class="sxs-lookup"><span data-stu-id="8be9e-115">Inclusion of a `Version` attribute results in the following warning:</span></span>
+## <a name="update-package-references"></a><span data-ttu-id="d0c71-114">Mettre à jour les références de package</span><span class="sxs-lookup"><span data-stu-id="d0c71-114">Update package references</span></span>
+
+<span data-ttu-id="d0c71-115">Si vous ciblez .NET Core, supprimez le `Version` attribut pour la référence de métapackage.</span><span class="sxs-lookup"><span data-stu-id="d0c71-115">If targeting .NET Core, remove the `Version` attribute for the metapackage reference.</span></span> <span data-ttu-id="d0c71-116">Inclusion d’un `Version` attribut entraîne l’avertissement suivant :</span><span class="sxs-lookup"><span data-stu-id="d0c71-116">Inclusion of a `Version` attribute results in the following warning:</span></span>
 
 ```console
 A PackageReference to 'Microsoft.AspNetCore.App' specified a Version of `2.2.0`. Specifying the version of this package is not recommended. For more information, see https://aka.ms/sdkimplicitrefs
 ```
 
-<span data-ttu-id="8be9e-116">Pour plus d'informations, consultez <xref:fundamentals/metapackage-app>.</span><span class="sxs-lookup"><span data-stu-id="8be9e-116">For more information, see <xref:fundamentals/metapackage-app>.</span></span>
+<span data-ttu-id="d0c71-117">Pour plus d'informations, consultez <xref:fundamentals/metapackage-app>.</span><span class="sxs-lookup"><span data-stu-id="d0c71-117">For more information, see <xref:fundamentals/metapackage-app>.</span></span>
 
-<span data-ttu-id="8be9e-117">La référence métapackage doit ressembler à ce qui suit `<PackageReference />` nœud :</span><span class="sxs-lookup"><span data-stu-id="8be9e-117">The metapackage reference should resemble the following `<PackageReference />` node:</span></span>
+<span data-ttu-id="d0c71-118">La référence métapackage doit ressembler à ce qui suit `<PackageReference />` nœud :</span><span class="sxs-lookup"><span data-stu-id="d0c71-118">The metapackage reference should resemble the following `<PackageReference />` node:</span></span>
 
 ```xml
 <ItemGroup>
@@ -63,7 +65,7 @@ A PackageReference to 'Microsoft.AspNetCore.App' specified a Version of `2.2.0`.
 </ItemGroup>
 ```
 
-<span data-ttu-id="8be9e-118">Si vous ciblez .NET Framework, mettre à jour chaque référence de package `Version` attribut 2.2.0 ou ultérieure.</span><span class="sxs-lookup"><span data-stu-id="8be9e-118">If targeting .NET Framework, update each package reference's `Version` attribute to 2.2.0 or later.</span></span> <span data-ttu-id="8be9e-119">Voici les références de package dans un projet ASP.NET Core 2.2 classique qui ciblent .NET Framework :</span><span class="sxs-lookup"><span data-stu-id="8be9e-119">Here are the package references in a typical ASP.NET Core 2.2 project targeting .NET Framework:</span></span>
+<span data-ttu-id="d0c71-119">Si vous ciblez .NET Framework, mettre à jour chaque référence de package `Version` attribut 2.2.0 ou ultérieure.</span><span class="sxs-lookup"><span data-stu-id="d0c71-119">If targeting .NET Framework, update each package reference's `Version` attribute to 2.2.0 or later.</span></span> <span data-ttu-id="d0c71-120">Voici les références de package dans un projet ASP.NET Core 2.2 classique qui ciblent .NET Framework :</span><span class="sxs-lookup"><span data-stu-id="d0c71-120">Here are the package references in a typical ASP.NET Core 2.2 project targeting .NET Framework:</span></span>
 
 ```xml
 <ItemGroup>
@@ -75,15 +77,15 @@ A PackageReference to 'Microsoft.AspNetCore.App' specified a Version of `2.2.0`.
 </ItemGroup>
 ```
 
-<span data-ttu-id="8be9e-120">Si le référencement la [Microsoft.AspNetCore.Razor.Design](https://www.nuget.org/packages/Microsoft.AspNetCore.Razor.Design/) du package, mettez à jour son `Version` attribut 2.2.0 ou ultérieure.</span><span class="sxs-lookup"><span data-stu-id="8be9e-120">If referencing the [Microsoft.AspNetCore.Razor.Design](https://www.nuget.org/packages/Microsoft.AspNetCore.Razor.Design/) package, update its `Version` attribute to 2.2.0 or later.</span></span> <span data-ttu-id="8be9e-121">Cela génère l’erreur suivante :</span><span class="sxs-lookup"><span data-stu-id="8be9e-121">Failure to do so results in the following error:</span></span>
+<span data-ttu-id="d0c71-121">Si le référencement la [Microsoft.AspNetCore.Razor.Design](https://www.nuget.org/packages/Microsoft.AspNetCore.Razor.Design/) du package, mettez à jour son `Version` attribut 2.2.0 ou ultérieure.</span><span class="sxs-lookup"><span data-stu-id="d0c71-121">If referencing the [Microsoft.AspNetCore.Razor.Design](https://www.nuget.org/packages/Microsoft.AspNetCore.Razor.Design/) package, update its `Version` attribute to 2.2.0 or later.</span></span> <span data-ttu-id="d0c71-122">Cela génère l’erreur suivante :</span><span class="sxs-lookup"><span data-stu-id="d0c71-122">Failure to do so results in the following error:</span></span>
 
 ```console
 Detected package downgrade: Microsoft.AspNetCore.Razor.Design from 2.2.0 to 2.1.2. Reference the package directly from the project to select a different version.
 ```
 
-## <a name="update-net-core-sdk-version-in-globaljson"></a><span data-ttu-id="8be9e-122">Mettre à jour la version du SDK .NET Core dans global.json</span><span class="sxs-lookup"><span data-stu-id="8be9e-122">Update .NET Core SDK version in global.json</span></span>
+## <a name="update-net-core-sdk-version-in-globaljson"></a><span data-ttu-id="d0c71-123">Mettre à jour la version du SDK .NET Core dans global.json</span><span class="sxs-lookup"><span data-stu-id="d0c71-123">Update .NET Core SDK version in global.json</span></span>
 
-<span data-ttu-id="8be9e-123">Si votre solution s’appuie sur un [global.json](/dotnet/core/tools/global-json) fichier cibler une version du SDK .NET Core spécifique, de mettre à jour son `version` propriété vers la version 2.2 installée sur votre ordinateur :</span><span class="sxs-lookup"><span data-stu-id="8be9e-123">If your solution relies upon a [global.json](/dotnet/core/tools/global-json) file to target a specific .NET Core SDK version, update its `version` property to the 2.2 version installed on your machine:</span></span>
+<span data-ttu-id="d0c71-124">Si votre solution s’appuie sur un [global.json](/dotnet/core/tools/global-json) fichier cibler une version du SDK .NET Core spécifique, de mettre à jour son `version` propriété vers la version 2.2 installée sur votre ordinateur :</span><span class="sxs-lookup"><span data-stu-id="d0c71-124">If your solution relies upon a [global.json](/dotnet/core/tools/global-json) file to target a specific .NET Core SDK version, update its `version` property to the 2.2 version installed on your machine:</span></span>
 
 ```json
 {
@@ -93,15 +95,15 @@ Detected package downgrade: Microsoft.AspNetCore.Razor.Design from 2.2.0 to 2.1.
 }
 ```
 
-## <a name="update-launch-settings"></a><span data-ttu-id="8be9e-124">Mettre à jour les paramètres de lancement</span><span class="sxs-lookup"><span data-stu-id="8be9e-124">Update launch settings</span></span>
+## <a name="update-launch-settings"></a><span data-ttu-id="d0c71-125">Mettre à jour les paramètres de lancement</span><span class="sxs-lookup"><span data-stu-id="d0c71-125">Update launch settings</span></span>
 
-<span data-ttu-id="8be9e-125">Si à l’aide de Visual Studio Code, de mettre à jour le fichier de paramètres de lancement du projet (*.vscode/launch.json*).</span><span class="sxs-lookup"><span data-stu-id="8be9e-125">If using Visual Studio Code, update the project's launch settings file (*.vscode/launch.json*).</span></span> <span data-ttu-id="8be9e-126">Le `program` chemin d’accès doit référencer le nouveau moniker du Framework cible :</span><span class="sxs-lookup"><span data-stu-id="8be9e-126">The `program` path should reference the new TFM:</span></span>
+<span data-ttu-id="d0c71-126">Si à l’aide de Visual Studio Code, de mettre à jour le fichier de paramètres de lancement du projet (*.vscode/launch.json*).</span><span class="sxs-lookup"><span data-stu-id="d0c71-126">If using Visual Studio Code, update the project's launch settings file (*.vscode/launch.json*).</span></span> <span data-ttu-id="d0c71-127">Le `program` chemin d’accès doit référencer le nouveau moniker du Framework cible :</span><span class="sxs-lookup"><span data-stu-id="d0c71-127">The `program` path should reference the new TFM:</span></span>
 
 [!code-json[](21-to-22/samples/launch.json?highlight=10)]
 
-## <a name="call-configurekestrel-instead-of-usekestrel"></a><span data-ttu-id="8be9e-127">Appelez ConfigureKestrel au lieu de UseKestrel</span><span class="sxs-lookup"><span data-stu-id="8be9e-127">Call ConfigureKestrel instead of UseKestrel</span></span>
+## <a name="kestrel-configuration"></a><span data-ttu-id="d0c71-128">Configuration de Kestrel</span><span class="sxs-lookup"><span data-stu-id="d0c71-128">Kestrel configuration</span></span>
 
-<span data-ttu-id="8be9e-128">Si l’application appelle <xref:Microsoft.AspNetCore.Hosting.WebHostBuilderKestrelExtensions.UseKestrel*> dans le `CreateWebHostBuilder` méthode de la `Program` classe, appelez `ConfigureKestrel` à la place pour éviter les conflits avec la [IIS dans le processus modèle d’hébergement](xref:fundamentals/servers/index#in-process-hosting-model):</span><span class="sxs-lookup"><span data-stu-id="8be9e-128">If the app calls <xref:Microsoft.AspNetCore.Hosting.WebHostBuilderKestrelExtensions.UseKestrel*> in the `CreateWebHostBuilder` method of the `Program` class, call `ConfigureKestrel` instead to avoid conflicts with the [IIS in-process hosting model](xref:fundamentals/servers/index#in-process-hosting-model):</span></span>
+<span data-ttu-id="d0c71-129">Si l’application appelle <xref:Microsoft.AspNetCore.Hosting.WebHostBuilderKestrelExtensions.UseKestrel*> dans le `CreateDefaultBuilder` méthode de la `Program` classe, appelez `ConfigureKestrel` pour configurer le serveur Kestrel au lieu de `UseKestrel` afin d’éviter les conflits avec la [IIS dans le processus modèle d’hébergement](xref:fundamentals/servers/index#in-process-hosting-model):</span><span class="sxs-lookup"><span data-stu-id="d0c71-129">If the app calls <xref:Microsoft.AspNetCore.Hosting.WebHostBuilderKestrelExtensions.UseKestrel*> in the `CreateDefaultBuilder` method of the `Program` class, call `ConfigureKestrel` to configure Kestrel server instead of `UseKestrel` in order to avoid conflicts with the [IIS in-process hosting model](xref:fundamentals/servers/index#in-process-hosting-model):</span></span>
 
 ```csharp
 public static IWebHostBuilder CreateWebHostBuilder(string[] args) =>
@@ -113,46 +115,66 @@ public static IWebHostBuilder CreateWebHostBuilder(string[] args) =>
         });
 ```
 
-<span data-ttu-id="8be9e-129">Pour plus d'informations, consultez <xref:fundamentals/servers/kestrel#how-to-use-kestrel-in-aspnet-core-apps>.</span><span class="sxs-lookup"><span data-stu-id="8be9e-129">For more information, see <xref:fundamentals/servers/kestrel#how-to-use-kestrel-in-aspnet-core-apps>.</span></span>
+<span data-ttu-id="d0c71-130">Si l’application n’appelle pas `CreateDefaultBuilder`, appelez <xref:Microsoft.AspNetCore.Hosting.WebHostBuilderKestrelExtensions.UseKestrel*> **avant** appelant `ConfigureKestrel`:</span><span class="sxs-lookup"><span data-stu-id="d0c71-130">If the app doesn't call `CreateDefaultBuilder`, call <xref:Microsoft.AspNetCore.Hosting.WebHostBuilderKestrelExtensions.UseKestrel*> **before** calling `ConfigureKestrel`:</span></span>
 
-## <a name="update-compatibility-version"></a><span data-ttu-id="8be9e-130">Version de compatibilité de mise à jour</span><span class="sxs-lookup"><span data-stu-id="8be9e-130">Update compatibility version</span></span>
+```csharp
+public static void Main(string[] args)
+{
+    var host = new WebHostBuilder()
+        .UseContentRoot(Directory.GetCurrentDirectory())
+        .UseKestrel()
+        .UseIISIntegration()
+        .UseStartup<Startup>()
+        .ConfigureKestrel((context, options) =>
+        {
+            // Set properties and call methods on options
+        })
+        .Build();
 
-<span data-ttu-id="8be9e-131">Mettre à jour la version de compatibilité dans `Startup.ConfigureServices` à `Version_2_2`:</span><span class="sxs-lookup"><span data-stu-id="8be9e-131">Update the compatibility version in `Startup.ConfigureServices` to `Version_2_2`:</span></span>
+    host.Run();
+}
+```
+
+<span data-ttu-id="d0c71-131">Pour plus d'informations, consultez <xref:fundamentals/servers/kestrel#how-to-use-kestrel-in-aspnet-core-apps>.</span><span class="sxs-lookup"><span data-stu-id="d0c71-131">For more information, see <xref:fundamentals/servers/kestrel#how-to-use-kestrel-in-aspnet-core-apps>.</span></span>
+
+## <a name="update-compatibility-version"></a><span data-ttu-id="d0c71-132">Version de compatibilité de mise à jour</span><span class="sxs-lookup"><span data-stu-id="d0c71-132">Update compatibility version</span></span>
+
+<span data-ttu-id="d0c71-133">Mettre à jour la version de compatibilité dans `Startup.ConfigureServices` à `Version_2_2`:</span><span class="sxs-lookup"><span data-stu-id="d0c71-133">Update the compatibility version in `Startup.ConfigureServices` to `Version_2_2`:</span></span>
 
 ```csharp
 services.AddMvc()
         .SetCompatibilityVersion(CompatibilityVersion.Version_2_2);
 ```
 
-## <a name="update-cors-policy"></a><span data-ttu-id="8be9e-132">Mettre à jour la stratégie CORS</span><span class="sxs-lookup"><span data-stu-id="8be9e-132">Update CORS policy</span></span>
+## <a name="update-cors-policy"></a><span data-ttu-id="d0c71-134">Mettre à jour la stratégie CORS</span><span class="sxs-lookup"><span data-stu-id="d0c71-134">Update CORS policy</span></span>
 
-<span data-ttu-id="8be9e-133">Dans ASP.NET Core 2.2, l’intergiciel (middleware) CORS répond avec une origine de caractère générique (`*`) si une stratégie autorise toute origine et informations d’identification.</span><span class="sxs-lookup"><span data-stu-id="8be9e-133">In ASP.NET Core 2.2, the CORS middleware responds with a wildcard origin (`*`) if a policy allows any origin and allows credentials.</span></span> <span data-ttu-id="8be9e-134">Informations d’identification ne sont pas pris en charge lors d’une origine de caractère générique (`*`) est spécifié, et les navigateurs interdira la demande CORS.</span><span class="sxs-lookup"><span data-stu-id="8be9e-134">Credentials aren't supported when a wildcard origin (`*`) is specified, and browsers will disallow the CORS request.</span></span> <span data-ttu-id="8be9e-135">Pour plus d’informations, notamment des options permettant de corriger le problème sur le client, consultez le [docs de web MDN](https://developer.mozilla.org/docs/Web/HTTP/CORS/Errors/CORSNotSupportingCredentials).</span><span class="sxs-lookup"><span data-stu-id="8be9e-135">For more information, including options for correcting the problem on the client, see the [MDN web docs](https://developer.mozilla.org/docs/Web/HTTP/CORS/Errors/CORSNotSupportingCredentials).</span></span>
+<span data-ttu-id="d0c71-135">Dans ASP.NET Core 2.2, l’intergiciel (middleware) CORS répond avec une origine de caractère générique (`*`) si une stratégie autorise toute origine et informations d’identification.</span><span class="sxs-lookup"><span data-stu-id="d0c71-135">In ASP.NET Core 2.2, the CORS middleware responds with a wildcard origin (`*`) if a policy allows any origin and allows credentials.</span></span> <span data-ttu-id="d0c71-136">Informations d’identification ne sont pas pris en charge lors d’une origine de caractère générique (`*`) est spécifié, et les navigateurs interdira la demande CORS.</span><span class="sxs-lookup"><span data-stu-id="d0c71-136">Credentials aren't supported when a wildcard origin (`*`) is specified, and browsers will disallow the CORS request.</span></span> <span data-ttu-id="d0c71-137">Pour plus d’informations, notamment des options permettant de corriger le problème sur le client, consultez le [docs de web MDN](https://developer.mozilla.org/docs/Web/HTTP/CORS/Errors/CORSNotSupportingCredentials).</span><span class="sxs-lookup"><span data-stu-id="d0c71-137">For more information, including options for correcting the problem on the client, see the [MDN web docs](https://developer.mozilla.org/docs/Web/HTTP/CORS/Errors/CORSNotSupportingCredentials).</span></span>
 
-<span data-ttu-id="8be9e-136">Pour corriger ce problème sur le serveur, effectuez l’une des actions suivantes :</span><span class="sxs-lookup"><span data-stu-id="8be9e-136">To correct this problem on the server, take one of the following actions:</span></span>
+<span data-ttu-id="d0c71-138">Pour corriger ce problème sur le serveur, effectuez l’une des actions suivantes :</span><span class="sxs-lookup"><span data-stu-id="d0c71-138">To correct this problem on the server, take one of the following actions:</span></span>
 
-* <span data-ttu-id="8be9e-137">Modifier la stratégie CORS pour ne plus autoriser les informations d’identification.</span><span class="sxs-lookup"><span data-stu-id="8be9e-137">Modify the CORS policy to no longer allow credentials.</span></span> <span data-ttu-id="8be9e-138">Autrement dit, supprimez l’appel à <xref:Microsoft.AspNetCore.Cors.Infrastructure.CorsPolicyBuilder.AllowCredentials*> lors de la configuration de la stratégie.</span><span class="sxs-lookup"><span data-stu-id="8be9e-138">That is, remove the call to <xref:Microsoft.AspNetCore.Cors.Infrastructure.CorsPolicyBuilder.AllowCredentials*> when configuring the policy.</span></span>
-* <span data-ttu-id="8be9e-139">Si les informations d’identification sont requises pour la demande CORS réussisse, modifiez la stratégie pour spécifier les hôtes autorisés.</span><span class="sxs-lookup"><span data-stu-id="8be9e-139">If credentials are required for the CORS request to succeed, modify the policy to specify allowed hosts.</span></span> <span data-ttu-id="8be9e-140">Par exemple, utilisez `builder.WithOrigins("https://api.example1.com", "https://example2.com")` au lieu d’utiliser <xref:Microsoft.AspNetCore.Cors.Infrastructure.CorsPolicyBuilder.AllowAnyOrigin*>.</span><span class="sxs-lookup"><span data-stu-id="8be9e-140">For example, use `builder.WithOrigins("https://api.example1.com", "https://example2.com")` instead of using <xref:Microsoft.AspNetCore.Cors.Infrastructure.CorsPolicyBuilder.AllowAnyOrigin*>.</span></span>
+* <span data-ttu-id="d0c71-139">Modifier la stratégie CORS pour ne plus autoriser les informations d’identification.</span><span class="sxs-lookup"><span data-stu-id="d0c71-139">Modify the CORS policy to no longer allow credentials.</span></span> <span data-ttu-id="d0c71-140">Autrement dit, supprimez l’appel à <xref:Microsoft.AspNetCore.Cors.Infrastructure.CorsPolicyBuilder.AllowCredentials*> lors de la configuration de la stratégie.</span><span class="sxs-lookup"><span data-stu-id="d0c71-140">That is, remove the call to <xref:Microsoft.AspNetCore.Cors.Infrastructure.CorsPolicyBuilder.AllowCredentials*> when configuring the policy.</span></span>
+* <span data-ttu-id="d0c71-141">Si les informations d’identification sont requises pour la demande CORS réussisse, modifiez la stratégie pour spécifier les hôtes autorisés.</span><span class="sxs-lookup"><span data-stu-id="d0c71-141">If credentials are required for the CORS request to succeed, modify the policy to specify allowed hosts.</span></span> <span data-ttu-id="d0c71-142">Par exemple, utilisez `builder.WithOrigins("https://api.example1.com", "https://example2.com")` au lieu d’utiliser <xref:Microsoft.AspNetCore.Cors.Infrastructure.CorsPolicyBuilder.AllowAnyOrigin*>.</span><span class="sxs-lookup"><span data-stu-id="d0c71-142">For example, use `builder.WithOrigins("https://api.example1.com", "https://example2.com")` instead of using <xref:Microsoft.AspNetCore.Cors.Infrastructure.CorsPolicyBuilder.AllowAnyOrigin*>.</span></span>
 
-## <a name="update-docker-images"></a><span data-ttu-id="8be9e-141">Mettre à jour des images Docker</span><span class="sxs-lookup"><span data-stu-id="8be9e-141">Update Docker images</span></span>
+## <a name="update-docker-images"></a><span data-ttu-id="d0c71-143">Mettre à jour des images Docker</span><span class="sxs-lookup"><span data-stu-id="d0c71-143">Update Docker images</span></span>
 
-<span data-ttu-id="8be9e-142">Le tableau suivant montre l’image Docker de modifications de la balise :</span><span class="sxs-lookup"><span data-stu-id="8be9e-142">The following table shows the Docker image tag changes:</span></span>
+<span data-ttu-id="d0c71-144">Le tableau suivant montre l’image Docker de modifications de la balise :</span><span class="sxs-lookup"><span data-stu-id="d0c71-144">The following table shows the Docker image tag changes:</span></span>
 
-| <span data-ttu-id="8be9e-143">2.1</span><span class="sxs-lookup"><span data-stu-id="8be9e-143">2.1</span></span>                                       | <span data-ttu-id="8be9e-144">2.2</span><span class="sxs-lookup"><span data-stu-id="8be9e-144">2.2</span></span>                                       |
+| <span data-ttu-id="d0c71-145">2.1</span><span class="sxs-lookup"><span data-stu-id="d0c71-145">2.1</span></span>                                       | <span data-ttu-id="d0c71-146">2.2</span><span class="sxs-lookup"><span data-stu-id="d0c71-146">2.2</span></span>                                       |
 | ----------------------------------------- | ----------------------------------------- |
 | `microsoft/dotnet:2.1-aspnetcore-runtime` | `microsoft/dotnet:2.2-aspnetcore-runtime` |
 | `microsoft/dotnet:2.1-sdk`                | `microsoft/dotnet:2.2-sdk`                |
 
-<span data-ttu-id="8be9e-145">Modifier le `FROM` lignes dans votre *Dockerfile* à utiliser les nouvelles balises d’image dans la colonne 2.2 de la table précédente.</span><span class="sxs-lookup"><span data-stu-id="8be9e-145">Change the `FROM` lines in your *Dockerfile* to use the new image tags in the preceding table's 2.2 column.</span></span>
+<span data-ttu-id="d0c71-147">Modifier le `FROM` lignes dans votre *Dockerfile* à utiliser les nouvelles balises d’image dans la colonne 2.2 de la table précédente.</span><span class="sxs-lookup"><span data-stu-id="d0c71-147">Change the `FROM` lines in your *Dockerfile* to use the new image tags in the preceding table's 2.2 column.</span></span>
 
-## <a name="build-manually-in-visual-studio-when-using-iis-in-process-hosting"></a><span data-ttu-id="8be9e-146">Créer manuellement dans Visual Studio lorsque vous utilisez IIS dans le processus d’hébergement</span><span class="sxs-lookup"><span data-stu-id="8be9e-146">Build manually in Visual Studio when using IIS in-process hosting</span></span>
+## <a name="build-manually-in-visual-studio-when-using-iis-in-process-hosting"></a><span data-ttu-id="d0c71-148">Créer manuellement dans Visual Studio lorsque vous utilisez IIS dans le processus d’hébergement</span><span class="sxs-lookup"><span data-stu-id="d0c71-148">Build manually in Visual Studio when using IIS in-process hosting</span></span>
 
-<span data-ttu-id="8be9e-147">De Visual Studio **la génération automatique de demande de navigateur** expérience ne fonctionne pas avec le [IIS dans le processus modèle d’hébergement](xref:fundamentals/servers/index#in-process-hosting-model).</span><span class="sxs-lookup"><span data-stu-id="8be9e-147">Visual Studio's **Auto build on browser request** experience doesn't function with the [IIS in-process hosting model](xref:fundamentals/servers/index#in-process-hosting-model).</span></span> <span data-ttu-id="8be9e-148">Vous devez manuellement regénérer le projet lors de l’utilisation dans le processus d’hébergement.</span><span class="sxs-lookup"><span data-stu-id="8be9e-148">You must manually rebuild the project when using in-process hosting.</span></span> <span data-ttu-id="8be9e-149">Améliorations apportées à cette expérience sont prévues pour une future version de Visual Studio.</span><span class="sxs-lookup"><span data-stu-id="8be9e-149">Improvements to this experience are planned for a future release of Visual Studio.</span></span>
+<span data-ttu-id="d0c71-149">De Visual Studio **la génération automatique de demande de navigateur** expérience ne fonctionne pas avec le [IIS dans le processus modèle d’hébergement](xref:fundamentals/servers/index#in-process-hosting-model).</span><span class="sxs-lookup"><span data-stu-id="d0c71-149">Visual Studio's **Auto build on browser request** experience doesn't function with the [IIS in-process hosting model](xref:fundamentals/servers/index#in-process-hosting-model).</span></span> <span data-ttu-id="d0c71-150">Vous devez manuellement regénérer le projet lors de l’utilisation dans le processus d’hébergement.</span><span class="sxs-lookup"><span data-stu-id="d0c71-150">You must manually rebuild the project when using in-process hosting.</span></span> <span data-ttu-id="d0c71-151">Améliorations apportées à cette expérience sont prévues pour une future version de Visual Studio.</span><span class="sxs-lookup"><span data-stu-id="d0c71-151">Improvements to this experience are planned for a future release of Visual Studio.</span></span>
 
-## <a name="update-logging-code"></a><span data-ttu-id="8be9e-150">Mettre à jour le code de journalisation</span><span class="sxs-lookup"><span data-stu-id="8be9e-150">Update logging code</span></span>
+## <a name="update-logging-code"></a><span data-ttu-id="d0c71-152">Mettre à jour le code de journalisation</span><span class="sxs-lookup"><span data-stu-id="d0c71-152">Update logging code</span></span>
 
-* <span data-ttu-id="8be9e-151">Déplacement de l’initialisation du fournisseur pour la journalisation `Startup.ConfigureServices`.</span><span class="sxs-lookup"><span data-stu-id="8be9e-151">Move logging provider initialization to `Startup.ConfigureServices`.</span></span>
+* <span data-ttu-id="d0c71-153">Déplacement de l’initialisation du fournisseur pour la journalisation `Startup.ConfigureServices`.</span><span class="sxs-lookup"><span data-stu-id="d0c71-153">Move logging provider initialization to `Startup.ConfigureServices`.</span></span>
 
-  <span data-ttu-id="8be9e-152">exemple 2.1 :</span><span class="sxs-lookup"><span data-stu-id="8be9e-152">2.1 example:</span></span>
+  <span data-ttu-id="d0c71-154">exemple 2.1 :</span><span class="sxs-lookup"><span data-stu-id="d0c71-154">2.1 example:</span></span>
 
   ```csharp
   public void Configure(IApplicationBuilder app, ILoggerFactory loggerFactory)
@@ -161,7 +183,7 @@ services.AddMvc()
   }
   ```
 
-  <span data-ttu-id="8be9e-153">exemple 2.2 :</span><span class="sxs-lookup"><span data-stu-id="8be9e-153">2.2 example:</span></span>
+  <span data-ttu-id="d0c71-155">exemple 2.2 :</span><span class="sxs-lookup"><span data-stu-id="d0c71-155">2.2 example:</span></span>
 
   ```csharp
   public void ConfigureServices(IServiceCollection services)
@@ -170,9 +192,9 @@ services.AddMvc()
   }
   ```
 
-* <span data-ttu-id="8be9e-154">Modification de filtrage pour utiliser le <xref:Microsoft.Extensions.DependencyInjection.LoggingServiceCollectionExtensions.AddLogging*> générateur.</span><span class="sxs-lookup"><span data-stu-id="8be9e-154">Change filtering to use the <xref:Microsoft.Extensions.DependencyInjection.LoggingServiceCollectionExtensions.AddLogging*> builder.</span></span>
+* <span data-ttu-id="d0c71-156">Modification de filtrage pour utiliser le <xref:Microsoft.Extensions.DependencyInjection.LoggingServiceCollectionExtensions.AddLogging*> générateur.</span><span class="sxs-lookup"><span data-stu-id="d0c71-156">Change filtering to use the <xref:Microsoft.Extensions.DependencyInjection.LoggingServiceCollectionExtensions.AddLogging*> builder.</span></span>
 
-  <span data-ttu-id="8be9e-155">exemple 2.1 :</span><span class="sxs-lookup"><span data-stu-id="8be9e-155">2.1 example:</span></span>
+  <span data-ttu-id="d0c71-157">exemple 2.1 :</span><span class="sxs-lookup"><span data-stu-id="d0c71-157">2.1 example:</span></span>
 
   ```csharp
   public void Configure(IApplicationBuilder app, ILoggerFactory loggerFactory)
@@ -184,7 +206,7 @@ services.AddMvc()
   }
   ```
 
-  <span data-ttu-id="8be9e-156">exemple 2.2 :</span><span class="sxs-lookup"><span data-stu-id="8be9e-156">2.2 example:</span></span>
+  <span data-ttu-id="d0c71-158">exemple 2.2 :</span><span class="sxs-lookup"><span data-stu-id="d0c71-158">2.2 example:</span></span>
 
   ```csharp
   public void ConfigureServices(IServiceCollection services)
@@ -200,9 +222,9 @@ services.AddMvc()
   }
   ```
 
-* <span data-ttu-id="8be9e-157">Modifier le chargement de configuration à utiliser le `AddLogging` générateur.</span><span class="sxs-lookup"><span data-stu-id="8be9e-157">Change configuration loading to use the `AddLogging` builder.</span></span>
+* <span data-ttu-id="d0c71-159">Modifier le chargement de configuration à utiliser le `AddLogging` générateur.</span><span class="sxs-lookup"><span data-stu-id="d0c71-159">Change configuration loading to use the `AddLogging` builder.</span></span>
 
-  <span data-ttu-id="8be9e-158">exemple 2.1 :</span><span class="sxs-lookup"><span data-stu-id="8be9e-158">2.1 example:</span></span>
+  <span data-ttu-id="d0c71-160">exemple 2.1 :</span><span class="sxs-lookup"><span data-stu-id="d0c71-160">2.1 example:</span></span>
 
   ```csharp
   public void Configure(IApplicationBuilder app, ILoggerFactory loggerFactory)
@@ -211,7 +233,7 @@ services.AddMvc()
   }
   ```
 
-  <span data-ttu-id="8be9e-159">exemple 2.2 :</span><span class="sxs-lookup"><span data-stu-id="8be9e-159">2.2 example:</span></span>
+  <span data-ttu-id="d0c71-161">exemple 2.2 :</span><span class="sxs-lookup"><span data-stu-id="d0c71-161">2.2 example:</span></span>
 
   ```csharp
   public void ConfigureServices(IServiceCollection services)
@@ -222,8 +244,8 @@ services.AddMvc()
   }
   ```
 
-## <a name="additional-resources"></a><span data-ttu-id="8be9e-160">Ressources supplémentaires</span><span class="sxs-lookup"><span data-stu-id="8be9e-160">Additional resources</span></span>
+## <a name="additional-resources"></a><span data-ttu-id="d0c71-162">Ressources supplémentaires</span><span class="sxs-lookup"><span data-stu-id="d0c71-162">Additional resources</span></span>
 
 * <xref:mvc/compatibility-version>
 * <xref:fundamentals/metapackage-app>
-* [<span data-ttu-id="8be9e-161">Références de package implicites</span><span class="sxs-lookup"><span data-stu-id="8be9e-161">Implicit package references</span></span>](/dotnet/core/tools/csproj#implicit-package-references)
+* [<span data-ttu-id="d0c71-163">Références de package implicites</span><span class="sxs-lookup"><span data-stu-id="d0c71-163">Implicit package references</span></span>](/dotnet/core/tools/csproj#implicit-package-references)
