commit translated contents

--- a/aspnetcore/migration/21-to-22.md
+++ b/aspnetcore/migration/21-to-22.md
@@ -4,14 +4,14 @@ author: scottaddie
 description: Cet article décrit les conditions préalables et les étapes courantes pour la migration d’un projet ASP.NET Core 2.1 vers ASP.NET Core 2.2.
 ms.author: scaddie
 ms.custom: mvc
-ms.date: 01/11/2019
+ms.date: 01/12/2019
 uid: migration/21-to-22
-ms.openlocfilehash: cb51c795447d4a2cd5e755e3aa726e60e0646ef3
-ms.sourcegitcommit: ec71fd5a988f927ae301813aae5ff764feb3bb6a
+ms.openlocfilehash: 43db90ce3e43e0035ae1b21335d201f3b21b9389
+ms.sourcegitcommit: 42a8164b8aba21f322ffefacb92301bdfb4d3c2d
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 01/12/2019
-ms.locfileid: "54249397"
+ms.lasthandoff: 01/16/2019
+ms.locfileid: "54341769"
 ---
 # <a name="migrate-from-aspnet-core-21-to-22"></a>Migrer d’ASP.NET Core 2.1 vers 2.2
 
@@ -43,7 +43,7 @@ Pour adopter le [modèle d’hébergement intra-processus pour IIS](xref:fundame
 <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
 ```
 
-Le modèle d’hébergement intra-processus n’est pas pris en charge pour les applications ASP.NET Core qui ciblent le .NET Framework.
+Le modèle d’hébergement in-process n’est pas pris en charge pour les applications ASP.NET Core qui ciblent le .NET Framework.
 
 Pour plus d'informations, consultez <xref:host-and-deploy/aspnet-core-module#hosting-models>.
 
@@ -101,9 +101,9 @@ Si à l’aide de Visual Studio Code, de mettre à jour le fichier de paramètre
 
 [!code-json[](21-to-22/samples/launch.json?highlight=10)]
 
-## <a name="kestrel-configuration"></a>Configuration de Kestrel
+## <a name="update-kestrel-configuration"></a>Mettre à jour de configuration de Kestrel
 
-Si l’application appelle <xref:Microsoft.AspNetCore.Hosting.WebHostBuilderKestrelExtensions.UseKestrel*> dans le `CreateDefaultBuilder` méthode de la `Program` classe, appelez `ConfigureKestrel` pour configurer le serveur Kestrel au lieu de `UseKestrel` afin d’éviter les conflits avec la [IIS dans le processus modèle d’hébergement](xref:fundamentals/servers/index#in-process-hosting-model):
+Si l’application appelle <xref:Microsoft.AspNetCore.Hosting.WebHostBuilderKestrelExtensions.UseKestrel*> en appelant `CreateDefaultBuilder` dans le [CreateWebHostBuilder méthode](xref:fundamentals/host/web-host#set-up-a-host) de la `Program` classe, appelez `ConfigureKestrel` pour configurer le serveur Kestrel au lieu de `UseKestrel` afin d’éviter est en conflit avec le [IIS dans le processus modèle d’hébergement](xref:fundamentals/servers/index#in-process-hosting-model):
 
 ```csharp
 public static IWebHostBuilder CreateWebHostBuilder(string[] args) =>
@@ -115,7 +115,7 @@ public static IWebHostBuilder CreateWebHostBuilder(string[] args) =>
         });
 ```
 
-Si l’application n’appelle pas `CreateDefaultBuilder`, appelez <xref:Microsoft.AspNetCore.Hosting.WebHostBuilderKestrelExtensions.UseKestrel*> **avant** appelant `ConfigureKestrel`:
+Si l’application n’appelle pas `CreateDefaultBuilder` et génère l’hôte manuellement dans le `Program` classe, appelez <xref:Microsoft.AspNetCore.Hosting.WebHostBuilderKestrelExtensions.UseKestrel*> **avant** appelant `ConfigureKestrel`:
 
 ```csharp
 public static void Main(string[] args)
