commit translated contents

--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -6,12 +6,12 @@ ms.author: tdykstra
 ms.custom: mvc
 ms.date: 01/04/2019
 uid: migration/22-to-30
-ms.openlocfilehash: 658b4af73395d47a80df0f57abc1b2e65d811bf8
-ms.sourcegitcommit: d22b3c23c45a076c4f394a70b1c8df2fbcdf656d
+ms.openlocfilehash: f5debd68d052c9f9191935a828a6fd5f9989c578
+ms.sourcegitcommit: ed76cc752966c604a795fbc56d5a71d16ded0b58
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 01/31/2019
-ms.locfileid: "55428419"
+ms.lasthandoff: 02/02/2019
+ms.locfileid: "55667360"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30-preview-2"></a>Migrer d’ASP.NET Core 2.2 à 3.0 Preview 2
 
@@ -69,9 +69,28 @@ Pour utiliser Json.NET dans un projet ASP.NET Core 3.0 :
 
 Permet de définir les paramètres de Newtonsoft avec `AddNewtonsoftJson`:
 
-    ```csharp
-    services.AddMvc()
-        .AddNewtonsoftJson(options => 
-               options.SerializerSettings.ContractResolver = 
-                  new CamelCasePropertyNamesContractResolver());
-    ```
+  ```csharp
+  services.AddMvc()
+      .AddNewtonsoftJson(options => 
+             options.SerializerSettings.ContractResolver = 
+                new CamelCasePropertyNamesContractResolver());
+  ```
+
+## <a name="hostbuilder-replaces-webhostbuilder"></a>HostBuilder remplace WebHostBuilder
+
+Les modèles ASP.NET Core 3.0 utilisent [hôte générique](xref:fundamentals/host/generic-host). Les versions précédentes utilisées [hôte Web](xref:fundamentals/host/web-host). Le code suivant montre le modèle ASP.NET Core 3.0 généré `Program` classe :
+
+[!code-csharp[](22-to-30/samples/Program.cs?name=snippet)]
+
+Le code suivant montre la 2.2 Core ASP.NET modèle généré `Program` classe :
+
+[!code-csharp[](22-to-30/samples/Program2.2.cs?name=snippet)]
+
+<xref:Microsoft.AspNetCore.Hosting.IWebHostBuilder> reste dans 3.0 et est le type de la `webBuilder` vu dans l’exemple de code précédent. <xref:Microsoft.AspNetCore.Hosting.WebHostBuilder> sera déconseillée dans une version ultérieure et remplacé par `HostBuilder`.
+
+## <a name="moving-from-webhostbuilder-to-hostbuilder"></a>Passage de WebHostBuilder à HostBuilder
+
+La modification la plus importante à partir de `WebHostBuilder` à `HostBuilder` est dans [l’injection de dépendance (DI)](xref:fundamentals/dependency-injection). Lorsque vous utilisez `HostBuilder`, vous pouvez injecter uniquement <xref:Microsoft.Extensions.Configuration.IConfiguration>, <xref:Microsoft.Extensions.Hosting.IHostingEnvironment>, et <xref:Microsoft.AspNetCore.Hosting.IHostingEnvironment> dans le constructeur du démarrage. Le `HostBuilder` les contraintes de l’injection de dépendances :
+
+* Activer le conteneur d’injection de dépendance à générer qu’une seule fois.
+* Permet d’éviter les problèmes de durée de vie objet résultant comme la résolution de plusieurs instances de singletons.
