commit translated contents

--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -6,12 +6,12 @@ ms.author: tdykstra
 ms.custom: mvc
 ms.date: 01/04/2019
 uid: migration/22-to-30
-ms.openlocfilehash: 01cfaffc5090bdccd80d23668f6f1e7f61f32eeb
-ms.sourcegitcommit: a91e8dd2f4b788114c8bc834507277f4b5e8d6c5
+ms.openlocfilehash: 0b9f03ee4178e62c75decc5fe2f39a302334341f
+ms.sourcegitcommit: 3c2ba9a0d833d2a096d9d800ba67a1a7f9491af0
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 02/04/2019
-ms.locfileid: "55712235"
+ms.lasthandoff: 02/07/2019
+ms.locfileid: "55854326"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30-preview-2"></a>Migrer d’ASP.NET Core 2.2 à 3.0 Preview 2
 
@@ -80,7 +80,39 @@ Le code suivant montre la 2.2 Core ASP.NET modèle généré `Program` classe :
 
 ## <a name="moving-from-webhostbuilder-to-hostbuilder"></a>Passage de WebHostBuilder à HostBuilder
 
-La modification la plus importante à partir de `WebHostBuilder` à `HostBuilder` est dans [l’injection de dépendance (DI)](xref:fundamentals/dependency-injection). Lorsque vous utilisez `HostBuilder`, vous pouvez injecter uniquement <xref:Microsoft.Extensions.Configuration.IConfiguration>, <xref:Microsoft.Extensions.Hosting.IHostingEnvironment>, et <xref:Microsoft.AspNetCore.Hosting.IHostingEnvironment> dans le constructeur du démarrage. Le `HostBuilder` les contraintes de l’injection de dépendances :
+La modification la plus importante à partir de `WebHostBuilder` à `HostBuilder` est dans [l’injection de dépendance (DI)](xref:fundamentals/dependency-injection). Lorsque vous utilisez `HostBuilder`, vous pouvez injecter uniquement <xref:Microsoft.Extensions.Configuration.IConfiguration> et <xref:Microsoft.AspNetCore.Hosting.IHostingEnvironment> dans le constructeur du démarrage. Le `HostBuilder` les contraintes de l’injection de dépendances :
 
 * Activer le conteneur d’injection de dépendance à générer qu’une seule fois.
 * Permet d’éviter les problèmes de durée de vie objet résultant comme la résolution de plusieurs instances de singletons.
+
+## <a name="update-signalr-code"></a>Mettre à jour le code de SignalR
+
+Si vous appelez `AddJsonProtocol`, remplacez-la par `AddNewtonsoftJsonProtocol`.
+
+* Les exemples suivants montrent le code serveur avant et après la modification :
+
+  ```csharp
+  services.AddSignalR(...)
+          .AddJsonProtocol(...) // 2.2
+  ```
+
+  ```csharp
+  services.AddSignalR(...)
+          .AddNewtonsoftJsonProtocol(...) // 3.0
+  ```
+
+* Les exemples suivants montrent le code du client .NET avant et après la modification :
+
+  ```csharp
+  connection = new HubConnectionBuilder()
+      .WithUrl(...)
+      .AddJsonProtocol(...) // 2.2
+      .Build()
+  ```
+
+  ```csharp
+  connection = new HubConnectionBuilder()
+      .WithUrl(...)
+      .AddNewtonsoftJsonProtocol(...) // 3.0
+      .Build()
+  ```
